# giga_with_code

./: .gitignore  README.md
jupyter_fastapi/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
jupyter_fastapi/app/: .env  main.py  run_jupyter.py
streamlit_demo/: Makefile  pyproject.toml
streamlit_demo/app/: .env-example  jupyter_client_api.py  main.py  utils.py
streamlit_demo/app/code_agent/: __init__.py  agent.py  tools.py
streamlit_demo/app/generate_tasks/: __init__.py  bis.py  math_graph.py  real_graph.py  simple.py
streamlit_demo/app/pages/: with_jupyter.py  with_jupyter_infinite.py
