[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["Mikhail Murtazin <murtazkorpaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<4.0"
gigachain = "^0.2.0"
streamlit = "^1.36.0"
plotly = "^5.22.0"
gigachain-community = "^0.2.0"
python-dotenv = "^1.0.1"
langfuse = "^2.37.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "T201", # print
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
